--- a/Weather_classification_using_a_K_Nearest_Neighbors_(KNN)_classifier.ipynb
+++ b/Weather_classification_using_a_K_Nearest_Neighbors_(KNN)_classifier.ipynb
@@ -8,7 +8,7 @@
       "source": [
         "#Project: Learning\n",
         "##**Deskripsi**\n",
-        "Ini adalah Tugas Project dengan materi Learning, yaitu menyelesaikan masalah pada topik machine learning dengan mengimplementasikan metode hingga membuat programnya. Pada tugas ini, diberikan studi kasus terkait classification dengan dataset yang sudah disiapkan. Mahasiswa secara berkelompok membangun model machine learning, melakukan observasi sederhana dan analisis, membuatkan laporan, dan mempresentasikannya di kelas.\n",
+        "This is a Project Assignment with Learning material, which is to solve problems on the topic of machine learning by implementing methods to make the program. In this assignment, a case study related to classification is given with a dataset that has been prepared. Students in groups build machine learning models, make simple observations and analyses, make reports, and present them in class.\n",
         "##Kelompok\n",
         "\n",
         "\n",
